[package]
name = "grass"
version = "0.1.0"
edition = "2021"
default-run = "grass"

[lib]
name = "grass"
path = "src/lib/lib.rs"
test = true

[[bin]]
name = "grass"
path = "src/cli/main.rs"
test = true
required-features = ["cli"]

[features]
dev = []
cli = ["dep:clap", "dep:colored", "dep:dialoguer"]
default = ["cli", "dev"]

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["derive"] }
dirs = "5.0.0"
toml = "0.7.2"
# dialoguer = { version = "0.10.3", features = ["fuzzy-select"]}
git2 = "0.17.0"
clap_complete = "4.2.1"
thiserror = "1.0.40"
anyhow = "1.0.71"

[dependencies.clap]
version = "4.1.8"
optional = true
features = ["derive"]

[dependencies.colored]
version = "2.0.0"
optional = true

[dependencies.dialoguer]
git = "https://github.com/console-rs/dialoguer.git"
rev = "c8cdaf3953c8e5e59734ecac14e67c6fc772f5ab"
features = ["fuzzy-select"]
optional = true
