[package]
name = "grass-repository-assistant"
version = "0.1.0"
edition = "2021"
default-run = "grass"
license = "MIT OR Apache-2.0"
description = "Grouped Repository Assistant - Manage your repositories throught the CLI"
homepage = "https://github.com/damymetzke/grass"
repository = "https://github.com/damymetzke/grass"
keywords = [
  "cli",
  "git",
  "repositories",
  "tool",
]
categories = [
  "command-line-utilities",
  "filesystem",
]
readme = "README.md"

[lib]
name = "grass"
path = "src/lib/lib.rs"
test = true

[[bin]]
name = "grass"
path = "src/cli/main.rs"
test = true
required-features = ["cli"]

[features]
dev = []
cli = ["dep:clap", "dep:colored", "dep:dialoguer"]
default = ["cli", "dev"]

[dependencies]
itertools = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
dirs = "5.0.0"
toml = "0.7.2"
git2 = "0.17.0"
clap_complete = "4.2.1"
thiserror = "1.0.40"
anyhow = "1.0.71"

[dependencies.clap]
version = "4.1.8"
optional = true
features = ["derive"]

[dependencies.colored]
version = "2.0.0"
optional = true

[dependencies.dialoguer]
version = "0.11.0"
features = ["fuzzy-select"]
optional = true
