[package]
name = "grass-repository-assistant"
version = "0.3.1"
edition = "2021"
default-run = "grass"
license = "MIT OR Apache-2.0"
description = "Grouped Repository Assistant - Manage your repositories throught the CLI"
homepage = "https://github.com/damymetzke/grass"
repository = "https://github.com/damymetzke/grass"
keywords = [
  "cli",
  "git",
  "repositories",
  "tool",
]
categories = [
  "command-line-utilities",
  "filesystem",
]
readme = "README.md"

[lib]
name = "grass"
path = "src/lib/lib.rs"
test = true

[[bin]]
name = "grass"
path = "src/cli/main.rs"
test = true
required-features = ["cli"]

[features]
dev = []
cli = ["dep:clap", "dep:colored", "dep:dialoguer", "dep:tracing-subscriber"]
default = ["cli", "dev"]

[dependencies]
anyhow = "1.0.71"
clap.features = ["derive"]
clap.optional = true
clap.version = "4.1.8"
clap_complete = "4.2.1"
colored.optional = true
colored.version = "2.0.0"
dialoguer.features = ["fuzzy-select"]
dialoguer.optional = true
dialoguer.version = "0.11.0"
dirs = "5.0.0"
itertools = "0.13.0"
serde.features = ["derive"]
serde.version = "1.0.152"
thiserror = "1.0.40"
toml = "0.8.2"
tracing = "0.1.40"
tracing-subscriber.optional = true
tracing-subscriber.version = "0.3.17"
